1.14.9 (2019-*)
  * 'roc' now prints messages when autodetecting 'levels' and 'direction' by default. Turn off with 'quiet = TRUE'
  * Speedup with 'algorithm = 2' (issue #44) and in 'coords' (issue #52)
  * Use text instead of Tcl/Tk progress bar by default (issue #51)
  * Fix 'method = "density"' smoothing when called directly from 'roc' (issue #49)
  * Renamed 'roc' argument 'n' to 'smooth.n'
  * Fixed 'are.paired' ignoring smoothing arguments of 'roc2' with 'return.paired.rocs'
  * New 'ret' option "all" in 'coords' (issue #47)

1.14.0 (2019-03-12)
  * The 'multiclass.roc' function now accepts multivariate decision values (code contributed by Matthias Döring)
  * 'ggroc' supports multiple aesthetics (issue #42)
  * Make 'ggplot2' dependency optional
  * Suggested packages can be installed interactively when required
  * Passing both 'cases' and 'controls' or 'response' and 'predictor' arguments is now an error
  * Many small bug fixes

1.13.0 (2018-09-23)
  * 'roc' now returns 'NaN' when predictor contains infinite values (issue #30)
  * Better handling of near-ties near +-Infinity and 0
  * 'ggroc' supports aes="group" to allow curves with identical aesthetics

1.12.1 (2018-05-06)
  * Fix a regression causing the allocation of a very large vector (issue #29)

1.12.0 (2018-05-05)
  * Fix bug that crashed DeLong calculations when predictor had near-ties close to the floating point precision limit that were rounded back to a predictor value (issue #25)
  * Fix bug that crashed 'ci.auc' and 'var' if 'direction' was ">" and 'percent=TRUE' (issue #25)
  * Fix bug causing 'ci' to return 'NaN' values with 'method="delong"' when cases or controls had a single observation (issue #27)
  * Fix 'power.roc.curve' failed with curves having 'percent=TRUE'
  * Fix 'ci(..., of="coords")' returned the 'ci' function instead of the CI
  * C++ code now check for user interrupts regularly with Rcpp::checkUserInterrupt()