@@ -12,21 +12,24 @@ expected.algorithm[["wfns"]] <- list(
 	pROC:::roc.utils.perfs.all.fast,
 	pROC:::rocUtilsPerfsAllC,
 	pROC:::roc.utils.perfs.all.test,
-	pROC:::rocUtilsPerfsAllC
+	pROC:::rocUtilsPerfsAllC, # 6 thresholds
+	pROC:::rocUtilsPerfsAllC # ordered
 )
 expected.algorithm[["ndka"]] <- list(
 	pROC:::roc.utils.perfs.all.safe,
 	pROC:::roc.utils.perfs.all.fast,
 	pROC:::rocUtilsPerfsAllC,
 	pROC:::roc.utils.perfs.all.test,
-	pROC:::roc.utils.perfs.all.fast
+	pROC:::roc.utils.perfs.all.fast, # 110 thresholds
+	pROC:::roc.utils.perfs.all.fast # numeric
 )
 expected.algorithm[["s100b"]] <-list(
 	pROC:::roc.utils.perfs.all.safe,
 	pROC:::roc.utils.perfs.all.fast,
 	pROC:::rocUtilsPerfsAllC,
 	pROC:::roc.utils.perfs.all.test,
-	pROC:::rocUtilsPerfsAllC
+	pROC:::rocUtilsPerfsAllC, # 51 thresholds
+	pROC:::roc.utils.perfs.all.fast # numeric
 )
 
 smooth.methods <- c("binormal", "density", "fitdistr", "logcondens", "logcondens.smooth")
