@@ -1,6 +1,7 @@
 1.14.9 (2019-*)
-  * 'roc' now prints messages when autodetecting 'levels' and 'direction' by default. Turn off with 'quiet = TRUE'
+  * 'roc' now prints messages when autodetecting 'levels' and 'direction' by default. Turn off with 'quiet = TRUE' or set these values explicitly
   * Speedup with 'algorithm = 2' (issue #44) and in 'coords' (issue #52)
+  * New 'algorithm = 6' (used by default) uses 'algorithm = 2' for numeric data, and 'algorithm = 3' for ordered vectors
   * Use text instead of Tcl/Tk progress bar by default (issue #51)
   * Fix 'method = "density"' smoothing when called directly from 'roc' (issue #49)
   * Renamed 'roc' argument 'n' to 'smooth.n'
